// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`form-control-number Renders with all props provided 1`] = `
<form-control-number exportparts="label,input,input-invalid">
  <div class="d-flex flex-column form-group">
    <label class="form-label" htmlfor="age" part="label">
      Age
    </label>
    <input class="form-control is-invalid" disabled="" id="age" name="age" part="input input-invalid" type="number" value="25">
    <small class="form-text text-muted" id="form-help-text-age" part="input-help-text">
      Enter your age
    </small>
    <small class="form-text text-danger" id="form-error-text-age" part="input-error-text">
      Invalid age
    </small>
  </div>
</form-control-number>
`;

exports[`form-control-number Renders with default props 1`] = `
<form-control-number exportparts="label,input,input-invalid">
  <div class="d-flex flex-column form-group">
    <label class="form-label" htmlfor="age" part="label">
      Age
    </label>
    <input class="form-control" id="age" name="age" part="input undefined" type="number" value="">
  </div>
</form-control-number>
`;
